--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,45 @@
+:root{
+    --color-azulado: #518edd62;
+}
+.contenido-cabecera{
+border-bottom-left-radius: 30px;
+border-top-left-radius: 30px;
+border-top-right-radius: 30px;
+border-bottom-right-radius: 30px;
+}
 
+body {
+  font-family: "Nunito", sans-serif;
+}
+.barras {
+  display: none;
+}
+.boton{
+    border: 3px solid var(--color-azulado);
+    color: var(--color-azulado);
+    height: 50px;
+    font-size: 30px;
+    font-weight: 300;
+    background-color: white;
+}
+.botonbuscar{
+    width: 110px;
+    height: 60px;
+    color: black;
+    font-size: 25px ;
+}
+
+.boton:hover {
+  background-color: var(--color-azulado);
+}
+.item-list {
+  font-size: 18px;
+  margin-left: 25px;
+}
+@media(max-width:650px){
+.contenido-principal{
+    margin: 0 auto;
+    padding: 25px;
+    justify-content: center;
+}
+}
