--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,9 @@ body {
   font-size: 18px;
   margin-left: 25px;
 }
+nav .navbar{
+  background-color: white;
+}
 @media(max-width:650px){
 .contenido-principal{
     margin: 0 auto;
