--- a/src/index.css
+++ b/src/index.css
@@ -1,47 +1,45 @@
-:root{
-    --color-azulado: #518edd62;
+:root {
+  --color-azulado: #518edd62;
+  --color-principal: #21b6a8;
 }
-/*.contenido-cabecera{
-border-bottom-left-radius: 30px;
-border-top-left-radius: 30px;
-border-top-right-radius: 30px;
-border-bottom-right-radius: 30px;
-}*/
 body {
   font-family: "Nunito", sans-serif;
 }
-.barras {
+.cabecera {
+  box-shadow: 0px 4px 15px 2px rgb(0 0 0 / 4%);
+}
+.btn-nav {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  position: relative;
+}
+.nav-line-btn {
+  width: 100%;
+  height: 2px;
+  border-radius: 4px;
+  display: block;
+  position: absolute;
+  left: 0;
+  background: var(--color-principal);
+  transition: all 0.25s ease;
+  transform-origin: 0px 100%;
+}
+.nav-line-btn:nth-child(1) {
+  top: 10%;
+}
+.nav-line-btn:nth-child(2) {
+  top: 50%;
+}
+.nav-line-btn:nth-child(3) {
+  bottom: 10%;
+}
+.navbar-items {
+  position: absolute;
+  top: 110%;
+  right: 4%;
+  background-color: #fff;
+}
+.nav-items-oculta {
   display: none;
-}
-.boton{
-    border: 3px solid var(--color-azulado);
-    color: var(--color-azulado);
-    height: 50px;
-    font-size: 30px;
-    font-weight: 300;
-    background-color: white;
-}
-.botonbuscar{
-    width: 110px;
-    height: 60px;
-    color: black;
-    font-size: 25px ;
-}
-
-.boton:hover {
-  background-color: var(--color-azulado);
-}
-.item-list {
-  font-size: 18px;
-  margin-left: 25px;
-}
-nav .navbar{
-  background-color: white;
-}
-@media(max-width:650px){
-.contenido-principal{
-    margin: 0 auto;
-    padding: 25px;
-    justify-content: center;
-}
 }
