--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,11 @@ nav .navbar{
     justify-content: center;
 }
 }
+.footer{
+  background-color: #f8f9fa;
+  bottom: 1px;
+  height: 60px;
+  width: 100%;
+  color: black;
+  position: absolute;
+}
