--- a/src/componentes/formulario.css
+++ b/src/componentes/formulario.css
@@ -3,60 +3,50 @@
 :root{
   --color-border: #21b6a8;
 }
-
 form{
 	width:300px;
 	padding:16px;
 	border-radius:10px;
 	margin:auto;
 	background-color:#ccc;
+  border: 1px solid var(--color-border);
 }
-
-form label{
-	width:px;
-	font-weight:bold;
-	display:inline-block;
-}
-
 form input{
 	width:180px;
-	padding:3px 10px;
+	padding:10px 20px;
 	border:1px solid var(--color-border);
-	border-radius:3px;
-	background-color:#f6f6f6;
-	margin:8px 0;
+	border-radius:5px;
+	border:1px solid var(--color-border);
+	margin:5px 0;
 	display:inline-block;
 }
-
-form input :hover{
-  border: 1px solid red;
+form input[type="text"]{
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
-
+form input[type="password"]{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
 form input[type="submit"]{
 	width:100%;
 	padding:8px 16px;
 	margin-top:32px;
-	background-color:rgb(28, 161, 150);
 	border-radius:5px;
 	display:block;
-	color:#fff;
+	color:black;
 	background-color:rgb(17, 231, 213,0.2);
 }
-
 form input[type="submit"]:hover{
   border:1px solid var(--color-border);
-
   box-shadow: 1px 1px 10px 5px var(--color-border);
-
+}
+.contenedor-imagen{
+  display: flex;
+  justify-content: center;
+  margin:50px;
 }
 
-textarea{
-	width:100%;
-	height:100px;
-	border:1px solid var(--color-border);
-	border-radius:3px;
-	background-color:#f6f6f6;
-	margin:8px 0;
-	resize:none;
-	display:block;
-}
+
