--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
 }
 .cabecera {
   box-shadow: 0px 4px 15px 2px rgb(0 0 0 / 4%);
+  z-index: 2;
 }
 .btn-nav {
   display: inline-block;
@@ -35,29 +36,36 @@ body {
   bottom: 10%;
 }
 .navbar-items {
-  position: absolute;
-  top: 110%;
-  right: 4%;
-  background-color: #fff;
-}
-.nav-items-oculta {
   display: none;
+  position: absolute;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  top: 110%;
+  right: 0;
+  background-color: #fff;
+  transition: all 0.5s;
+}
+.navbar-items.show {
+  display: block;
+}
+.navbar-items a {
+  text-decoration: none;
+  color: var(--color-principal);
+}
+.boton {
+  border: 3px solid var(--color-azulado);
+  color: var(--color-azulado);
+  height: 50px;
+  font-size: 30px;
+  font-weight: 300;
+  background-color: white;
 }
 
-.boton{
-    border: 3px solid var(--color-azulado);
-    color: var(--color-azulado);
-    height: 50px;
-    font-size: 30px;
-    font-weight: 300;
-    background-color: white;
-}
-
-.botonbuscar{
-    width: 110px;
-    height: 60px;
-    color: black;
-    font-size: 25px ;
+.botonbuscar {
+  width: 110px;
+  height: 60px;
+  color: black;
+  font-size: 25px;
 }
 
 .boton:hover {
@@ -67,17 +75,16 @@ body {
   font-size: 18px;
   margin-left: 25px;
 }
-nav .navbar{
+nav .navbar {
   background-color: white;
 }
-@media(min-width:650px){
-.contenido-principal{
+@media (min-width: 650px) {
+  .contenido-principal {
     margin: 0 auto;
     padding: 25px;
     justify-content: center;
+  }
+  .burguer-menu {
+    display: none;
+  }
 }
-.burguer-menu{
-  display: none;
-}
-}
-
