--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,21 @@
 :root {
   --color-azulado: #518edd62;
   --color-principal: #21b6a8;
+  --altura-cabecera-pie-xs: 60px;
+  --altura-cabecera-pie-md: 75px;
 }
 body {
   font-family: "Nunito", sans-serif;
+}
+.link-page {
+  color: var(--color-principal);
+}
+.link-page:hover {
+  color: var(--color-principal);
+  text-decoration: none;
+}
+.color-page {
+  color: var(--color-principal);
 }
 .cabecera {
   box-shadow: 0px 4px 15px 2px rgb(0 0 0 / 4%);
@@ -44,21 +56,11 @@ body {
   font-size: 18px;
   margin-left: 25px;
 }
-nav .navbar {
-  background-color: white;
-}
 .mapa .leaflet-container {
-  height: 80vh;
+  min-height: calc(100vh - var(--altura-cabecera-pie-xs) * 2);
 }
 .row-notfound {
   height: 80vh;
-}
-@media (min-width: 650px) {
-  .contenido-principal {
-    margin: 0 auto;
-    padding: 25px;
-    justify-content: center;
-  }
 }
 .footer {
   background-color: #f8f9fa;
@@ -68,5 +70,4 @@ nav .navbar {
   color: black;
   position: absolute;
   border-top: 1px solid var(--color-principal);
-
 }
