--- a/src/index.css
+++ b/src/index.css
@@ -75,3 +75,8 @@ body {
   position: absolute;
   border-top: 1px solid var(--color-principal);
 }
+@media (min-width: 540px) {
+  .mapa .leaflet-container {
+    min-height: calc(100vh - var(--altura-cabecera-pie-md) * 2);
+  }
+}
