--- a/src/pages/loginPage/formulario.css
+++ b/src/pages/loginPage/formulario.css
@@ -45,8 +45,13 @@
   border: 1px solid var(--color-border);
   box-shadow: 1px 1px 10px 5px var(--color-border);
 }
-.contenedor-imagen {
+.contenedor-imagen{
   display: flex;
   justify-content: center;
   margin: 50px;
+}
+.form-login input[type="number"]{
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
