--- a/src/pages/loginPage/formulario.css
+++ b/src/pages/loginPage/formulario.css
@@ -4,6 +4,8 @@
 
 :root {
   --color-border: #21b6a8;
+  --color-negro: #000;
+
 }
 .form-login {
   width: 300px;
@@ -38,7 +40,7 @@
   margin-top: 32px;
   border-radius: 5px;
   display: block;
-  color: black;
+  color: var(--color-negro);
   background-color: rgb(17, 231, 213, 0.2);
 }
 .form-login input[type="submit"]:hover {
