--- a/src/index.css
+++ b/src/index.css
@@ -133,6 +133,34 @@ body {
 .box {
   border-top: 1px solid var(--color-principal);
 }
+.fundador {
+  display: inline-block;
+  position: relative;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+.fundador img {
+  width: auto;
+  height: 140%;
+  margin-left: 0px;
+  margin-top: 25px;
+}
+.fundador1 {
+  display: inline-block;
+  position: relative;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+.fundador1 img {
+  width: auto;
+  height: 100%;
+  margin-left: 25px;
+}
+
 
 .both {
   background-color: var(--color-blanco);
