--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,20 @@ body {
 .both{
 background-color: var(--color-blanco);
 }
+.contenedor{
+  width: 800px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+.circulo{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.circulo.activo{
+  background-color: orange;
+}
 
 @media (min-width: 540px) {
   .mapa .leaflet-container {
