--- a/src/index.css
+++ b/src/index.css
@@ -160,6 +160,35 @@ body {
   height: 100%;
   margin-left: 25px;
 }
+.fundador2 {
+  display: inline-block;
+  position: relative;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+.fundador2 img {
+  width: auto;
+  height: 90%;
+  margin-left: 10px;
+  margin-top: 15px;
+}
+.fundador3 {
+  display: inline-block;
+  position: relative;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+.fundador3 img {
+  width: auto;
+  height: 110%;
+  margin-left: 0px;
+  margin-top: -5px;
+}
+
 
 
 .both {
