--- a/src/pages/loginPage/formulario.css
+++ b/src/pages/loginPage/formulario.css
@@ -5,7 +5,6 @@
 :root {
   --color-border: #21b6a8;
   --color-negro: #000;
-
 }
 .form-login {
   width: 300px;
@@ -15,45 +14,35 @@
   background-color: #ccc;
   border: 1px solid var(--color-border);
 }
-.form-login input {
+.form-login input[type="text"],
+.form-login select,
+.form-login input[type="file"],
+.form-login textarea {
   width: 180px;
   padding: 10px 20px;
-  border: 1px solid var(--color-border);
   border-radius: 5px;
-  border: 1px solid var(--color-border);
   margin: 5px 0;
   display: inline-block;
 }
-.form-login input[type="text"] {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-.form-login input[type="password"] {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-.form-login input[type="submit"] {
-  width: 100%;
-  padding: 8px 16px;
-  margin-top: 32px;
-  border-radius: 5px;
-  display: block;
-  color: var(--color-negro);
-  background-color: rgb(17, 231, 213, 0.2);
-}
-.form-login input[type="submit"]:hover {
+.form-login input[type="text"],
+.form-login select,
+.form-login textarea {
   border: 1px solid var(--color-border);
-  box-shadow: 1px 1px 10px 5px var(--color-border);
 }
-.contenedor-imagen{
+.form-login input[type="file"] {
+  color: transparent;
+}
+.form-login input[type="text"],
+.form-login input[type="number"],
+.form-login input[type="password"],
+.form-login select,
+.form-login textarea {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.contenedor-imagen {
   display: flex;
   justify-content: center;
   margin: 50px;
-}
-.form-login input[type="number"]{
-  display: flex;
-  justify-content: center;
-  width: 100%;
 }
