--- a/src/pages/loginPage/formulario.css
+++ b/src/pages/loginPage/formulario.css
@@ -17,6 +17,7 @@
 .form-login input[type="text"],
 .form-login select,
 .form-login input[type="file"],
+.form-login input[type="password"],
 .form-login textarea {
   width: 180px;
   padding: 10px 20px;
@@ -26,6 +27,7 @@
 }
 .form-login input[type="text"],
 .form-login select,
+.form-login input[type="password"],
 .form-login textarea {
   border: 1px solid var(--color-border);
 }
