--- a/src/index.css
+++ b/src/index.css
@@ -237,38 +237,43 @@ body {
   background-color: orange;
 }
 
-@media (min-width: 540px) {
-  .mapa .leaflet-container {
-    min-height: calc(100vh - var(--altura-cabecera-pie-md) * 2);
-  }
-  .imagen{
-    justify-content: center;
-    width: fit-content;
-  }
-}
+
+
 
 
 
 .imagen{
-  margin-top: 2px;
+  padding-top: 2px;
   height: 300px;
+  border-bottom: 1px solid var(--color-principal);
 };
-
 
 .datos{
-  margin: 10px;
-  border: 2px solid var(--color-principal);
+  padding-top: 6px;
+  border-bottom: 1px solid var(--color-principal);
+  margin-bottom: 10px;
 };
-.datos > .nombre{
-  margin-left: 60px;
+.nombre{
+  margin-top: 10px;
 }
-
 .descripcion{
-  margin: 10px;
-  border: 2px solid var(--color-principal);
+  padding-top: 6px;
+  border-bottom: 1px solid var(--color-principal);
 };
 
-.ubicacion{
-  margin: 4px;
-  border: 2px solid var(--color-principal);
+.ubi{
+  padding-top: 6px;
+  margin-bottom: 6px;
 };
+
+
+
+@media (min-width: 540px) {
+  .mapa .leaflet-container {
+    min-height: calc(100vh - var(--altura-cabecera-pie-md) * 2);
+  }
+  .{
+    justify-content: center;
+    width: fit-content;
+  }
+}
