--- a/src/index.css
+++ b/src/index.css
@@ -232,49 +232,36 @@ body {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-}
+};
 .circulo.activo {
   background-color: orange;
-}
-
-
-
-
-
-
-
-.imagen{
-  padding-top: 2px;
+};
+.imagen-sitio{
+  margin-top: 2px;
+  margin-right: 10px;
   height: 300px;
-  border-bottom: 1px solid var(--color-principal);
 };
-
 .datos{
-  padding-top: 6px;
-  border-bottom: 1px solid var(--color-principal);
-  margin-bottom: 10px;
+  margin: 10px;
+  border: 2px solid var(--color-principal);
 };
-.nombre{
-  margin-top: 10px;
-}
+.datos > .nombre{
+  margin-left: 60px;
+};
 .descripcion{
-  padding-top: 6px;
-  border-bottom: 1px solid var(--color-principal);
+  margin: 10px;
+  border: 2px solid var(--color-principal);
 };
-.ubi{
-  padding-top: 6px;
-  margin-bottom: 6px;
+.ubicacion{
+  margin: 4px;
+  border: 2px solid var(--color-principal);
 };
-
-
-
-@media (min-width: 540px) {
+@media (max-width: 540px) {
   .mapa .leaflet-container {
     min-height: calc(100vh - var(--altura-cabecera-pie-md) * 2);
   }
-  .{
+  .imagen{
     justify-content: center;
     width: fit-content;
   }
-}
-
+};
