--- a/src/index.css
+++ b/src/index.css
@@ -233,47 +233,45 @@ body {
 .circulo.activo {
   background-color: orange;
 }
+.imagenlugar{
+  margin-top: 4px;
+}
 .descripcion-imagen{
-  display: flex;
-  justify-content: center ;
-  align-items: center ;
-  margin-top: 10px;
-  padding-right: 20px;
-}
-.imagen{
-  display: flex;
-  justify-content: center;
-}
-.imagen-sitio{
-  display: flex;
-  justify-content: center;
-  margin-right: 20px;
-  margin-left: 10px;
 }
 .datos{
-  margin: 10px;
-  padding: 5px;
+  margin: 4px;
+  padding-top: 8px;
+  padding-bottom: 8px;
   border-top: 1px solid var(--color-principal);
 }
-.datos > .nombre{
-  margin-left: 60px;
+.datos > .puntuacion{
+  padding-bottom: 5px;
 }
+.datos > .provinciasitio{
+  padding-bottom: 5px;
+}
+
 .descripcion{
-  margin: 10px;
-  padding: 5px;
+  margin: 4px;
+  padding-top: 8px;
+  padding-bottom: 8px;
   border-top: 1px solid var(--color-principal);
 };
+
+.descripcion > .descripcionsitio{
+  padding-bottom: 5px;
+
+}
+.descripcion > .coordenadassitio{
+  padding-bottom: 5px;
+
+}
+.descripcion > .tipositio{
+  padding-bottom: 5px;
+}
+
 @media (min-width: 540px) {
   .mapa .leaflet-container {
     min-height: calc(100vh - var(--altura-cabecera-pie-md) * 2);
-  }
-  .imagen{
-    display: flex;
-    justify-content: center;
-  }
-  .descripcion-imagen{
-    display: flex;
-    align-items: center;
-    width:500px;
   }
 };
